--- a/gdb/features/Makefile
+++ b/gdb/features/Makefile
@@ -230,8 +230,10 @@ FEATURE_XMLFILES = aarch64-core.xml \
 	i386/x32-core.xml \
 	riscv/32bit-cpu.xml \
 	riscv/32bit-fpu.xml \
+	riscv/32bit-cheri64.xml \
 	riscv/64bit-cpu.xml \
 	riscv/64bit-fpu.xml \
+	riscv/64bit-cheri128.xml \
 	rx.xml \
 	tic6x-c6xp.xml \
 	tic6x-core.xml \
